# subtitle-cut

./: .gitattributes  .gitignore  LICENSE  README.md  README.txt  config.json  install.bat  pyproject.toml  requirements.txt  run_webapp.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
QwenASRMiniTool/: README.md  api_server.py  app-gpu.py  app.py  batch_tab.py  build.bat  build_venv.bat  chatllm_engine.py  diarize.py  downloader.py  ffmpeg_utils.py  generate_prompt_template.py  processor_numpy.py  prompt_template.json  requirements-gpu.txt  requirements.txt  runtime_hook_utf8.py  setting.py  start-api.bat  start-gpu.bat  streamlit_app.py  streamlit_vulkan.py  subtitle_editor.py
data/: fillerwords_zh.txt
docs/: tutorial_ppt_zh.md
scripts/: demo.sh  eval_asr_boundaries.py  install_ffmpeg_help.md  setup_environment.bat  setup_environment.py
src/: cli.py
src/asr/: models.py  paraformer.py  qwen_asr.py  transcribe.py  transcribe_presplit.py
src/audio/: __init__.py  parallel_asr.py  segment_exporter.py  segment_splitter.py
src/core/: keyframes.py  schema.py  silence.py  srt_vtt.py  transform.py
src/ffmpeg/: __init__.py  audio_chunked_cutter.py  batch_audio_cutter.py  cutter.py  inverse_audio_cutter.py  optimized_audio_cutter.py  simple_audio_cutter.py  time_based_chunked_cutter.py  utils.py
src/video/: __init__.py  presplit.py  segment_exporter.py
src/webapp/: app.py  app_fastapi.py  config.py  ramdisk.py  storage.py  tasks.py  waveform.py
src/webapp/static/: app.js  presplit-options.js  (+3 more)
(+1 files in other folders)
