[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subtitle-cut"
version = "0.1.0"
description = "Tools for removing filler words from transcripts and cutting videos."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Sister Team"}]
keywords = ["ffmpeg", "subtitle", "cli"]
dependencies = [
    "click==8.1.8",
    "Flask==3.0.3",
    "pydantic==2.10.6",
    "numpy==1.24.4",
    "torch==2.3.1+cu118",
    "torchaudio==2.3.1+cu118",
    "torchvision==0.18.1+cu118",
    "funasr[modelscope]==1.2.7",
    "modelscope==1.30.0",
    "onnxruntime-gpu==1.16.3",
    "sentencepiece==0.2.0",
    "pypinyin==0.55.0",
    "typing_extensions==4.13.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1"
]

[project.urls]
"Repository" = "https://example.com/subtitle-cut"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
pythonpath = ["src"]
